<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center|left"
        tools:ignore="RtlHardcoded,UseCompoundDrawables">
        <ImageView
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:src="@drawable/u"
            android:id="@+id/user_head2"
            android:contentDescription="@string/userhead"
            android:layout_marginStart="10dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="center|left"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            tools:ignore="RtlHardcoded" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/search_name"
            android:text="@string/username"
            android:gravity="center"
            android:padding="5dp" />
    </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/right"
            android:id="@+id/search_add"
            android:contentDescription="@string/turntoaddfriend"
            android:layout_gravity="center|end"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            />



</LinearLayout>