<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    tools:context="instantmessaging.android.myapplication.LoginActivity">


    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        >

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/left_blue"
            android:id="@+id/imageButton"
            android:contentDescription="@string/back_to_register"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"/>

        <TextView
            android:text="@string/Login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textSize="26sp"
            android:textColor="@color/colorPrimary"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:id="@+id/Login_password"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="19dp"/>

    <Button
        android:text="@string/Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_Login"
        android:textSize="16sp"
        android:layout_below="@+id/Login_password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/titleBackground"
        android:background="@drawable/btn_blue_bg"
        android:layout_marginTop="19dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/register_name"
        android:id="@+id/Login_username"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_above="@+id/Login_password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
