<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_friend"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="instantmessaging.android.myapplication.AddFriendActivity">

    <LinearLayout
        android:layout_height="60dp"
        android:layout_width="match_parent"
        android:id="@+id/title"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:layout_alignParentTop="true"
        android:background="@color/titleBackground"
        android:paddingRight="10dp"
        android:paddingLeft="10dp">


    <LinearLayout
        android:layout_height="30dp"
        android:layout_width="0dp"
        android:background="@drawable/bg_search_inputbox"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="1">

    <ImageView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:contentDescription="@string/search"
        android:layout_marginStart="10dp"
        android:src="@drawable/search"
        android:layout_marginLeft="10dp"
        android:layout_gravity="center_vertical"/>

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/addfriend"
        android:gravity="center_vertical"
        android:background="@color/lightgray"
        android:paddingLeft="5dp"
        android:paddingStart="5dp"
        android:maxLines="1"
        android:paddingTop="6dp"
        android:textSize="16sp"
        android:textColor="#000"
        android:textColorHint="@color/titleBackground"
        android:hint="@string/friend"
        tools:ignore="InefficientWeight,NestedWeights,RtlHardcoded,RtlSymmetry"
        android:layout_weight="0.66" />


</LinearLayout>
        <Button
            android:layout_height="30dp"
            android:layout_width="wrap_content"
            android:id="@+id/cancel"
            android:background="@color/button"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:textSize="16sp"

            android:textColor="@color/titleBackground"
            android:text="@string/cancel"
            android:layout_weight="0.16" />


    </LinearLayout>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/btn_addfriend"
        android:background="@color/button"
        android:textColor="@color/titleBackground"
        android:text="@string/addfriend"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"/>

    <ListView
        android:id="@+id/list_addfriend"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:divider="@null"
        android:dividerHeight="5dp"
        android:scrollbars="none"
        android:cacheColorHint="#00000000"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="13dp"
        android:layout_below="@+id/title" />

</RelativeLayout>
